@@ -11,28 +11,28 @@
 
 AUTOMAKE_OPTIONS = 1.6 gnu $(top_builddir)/ansi2knr
 
-check_PROGRAMS = tversion tinternals tinits tisqrt tsgn		\
-     tcheck tisnan texceptions tset_exp tset mpf_compat		\
-     mpfr_compat reuse tabs tacos tacosh tadd tadd1sp tadd_d	\
-     tadd_ui tagm tasin tasinh tatan tatanh taway tbuildopt	\
-     tcan_round tcbrt tcmp tcmp2 tcmp_d tcmp_ld tcmp_ui		\
-     tcmpabs tcomparisons tconst_catalan tconst_euler		\
-     tconst_log2 tconst_pi tcopysign tcos tcosh tcot tcoth	\
-     tcsc tcsch td_div td_sub tdigamma tdim tdiv tdiv_d tdiv_ui \
-     teint teq terf texp texp10 texp2 texpm1 tfactorial tfits   \
-     tfma tfmod tfms tfprintf tfrac tgamma tget_flt tget_d 	\
-     tget_d_2exp tget_f tget_ld_2exp tget_set_d64 tget_sj       \
-     tget_str tget_z tgmpop thyperbolic thypot tinp_str tj0 tj1 \
-     tjn tl2b tlgamma tli2 tlngamma tlog tlog10 tlog1p tlog2	\
-     tmin_prec tminmax tmodf tmul tmul_2exp tmul_d tmul_ui	\
-     tnext tout_str toutimpl tpow tpow3 tpow_all tpow_z		\
-     tprintf trandom trec_sqrt tremquo trint troot		\
-     tround_prec tsec tsech tset_d tset_f tset_ld tset_q	\
-     tset_si tset_sj tset_str tset_z tsi_op tsin tsin_cos	\
-     tsinh tsinh_cosh tsprintf tsqr tsqrt tsqrt_ui tstckintc	\
-     tstrtofr tsub tsub1sp tsub_d tsub_ui tsubnormal tsum	\
-     tswap ttan ttanh ttrunc tui_div tui_pow tui_sub ty0 ty1	\
-     tyn tzeta tzeta_ui
+check_PROGRAMS = tversion tinternals tinits tisqrt tsgn tcheck	\
+     tisnan texceptions tset_exp tset mpf_compat mpfr_compat	\
+     reuse tabs tacos tacosh tadd tadd1sp tadd_d tadd_ui tagm	\
+     tasin tasinh tatan tatanh taway tbuildopt tcan_round	\
+     tcbrt tcmp tcmp2 tcmp_d tcmp_ld tcmp_ui tcmpabs		\
+     tcomparisons tconst_catalan tconst_euler tconst_log2	\
+     tconst_pi tcopysign tcos tcosh tcot tcoth tcsc tcsch	\
+     td_div td_sub tdigamma tdim tdiv tdiv_d tdiv_ui teint teq	\
+     terf texp texp10 texp2 texpm1 tfactorial tfits tfma tfmod	\
+     tfms tfprintf tfrac tgamma tget_flt tget_d tget_d_2exp	\
+     tget_f tget_ld_2exp tget_set_d64 tget_sj tget_str tget_z	\
+     tgmpop thyperbolic thypot tinp_str tj0 tj1 tjn tl2b	\
+     tlgamma tli2 tlngamma tlog tlog10 tlog1p tlog2 tmin_prec	\
+     tminmax tmodf tmul tmul_2exp tmul_d tmul_ui tnext		\
+     tout_str toutimpl tpow tpow3 tpow_all tpow_z tprintf	\
+     trandom trec_sqrt tremquo trint troot tround_prec tsec	\
+     tsech tset_d tset_f tset_ld tset_q tset_si tset_sj		\
+     tset_str tset_z tsi_op tsin tsin_cos tsinh tsinh_cosh	\
+     tsprintf tsqr tsqrt tsqrt_ui tstckintc tstrtofr tsub	\
+     tsub1sp tsub_d tsub_ui tsubnormal tsum tswap turandom	\
+     ttan ttanh ttrunc tui_div tui_pow tui_sub ty0 ty1 tyn	\
+     tzeta tzeta_ui
 
 
 EXTRA_DIST = tgeneric.c tgeneric_ui.c mpf_compat.h inp_str.data tmul.dat
